# pwrapi-ref

./: .gitignore  start-over.sh
examples/config/: rapl-node.xml  rnet-node.xml
src/plugins/: Makefile.am  dummy_dev.c  pwr_dev.h  pwr_rapldev.c  pwr_rapldev.h  pwr_rnet_remote.c  pwr_rnet_remote.h  rnet_dev.c
src/pwr/: communicator.h  debug.cc  debug.h  device.h  distCntxt.cc  distCntxt.h  distComm.h  event.h  eventChannel.h  eventType.h  events.h  pwr.cc  pwr.h  serialize.h  tcpEventChannel.cc  tcpEventChannel.h
tools/: pwrapi.c
tools/pwrdaemon/: Makefile.am  powerrt.cc  pwrdaemon.cc  rnet_test.cc
tools/pwrdaemon/logger/: energy.h  logger.cc  mult.h  power.h  powerGrp.h  rate.h  setMult.h  stat.h  util.h  work.h
tools/pwrdaemon/router/: allocEvent.cc  allocEvent.h  client.cc  commCreateEvent.cc  commCreateEvent.h  commGetSamplesEvent.h  commLogEvents.h  commReqEvent.h  commRespEvent.h  rnetClient.cc  rnetClient.h  rnetCommunicator.cc  rnetCommunicator.h  router.cc  router.h  routerCore.h  routerEvent.h  routerSelect.cc  routerSelect.h  rtrRouterEvent.h  serverEvents.h  torusCore.cc  torusCore.h  treeCore.cc  treeCore.h
tools/pwrdaemon/server/: allocEvent.cc  allocEvent.h  commCreateEvent.h  commDestroyEvent.h  commGetSamplesReqEvent.h  commLogEvent.h  commReqEvent.h  routerEvent.h  server.cc  server.h
